# Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  Makefile  README.md  RoadMap  cross.cpp  cross.h  figure.cpp  figure.h  game.cpp  game.h  line.cpp  line.h  main.cpp  mathfuncs.cpp  mathfuncs.h  test
src/: cross.cpp  figure.h  game.cpp  game.h  line.cpp  main.cpp
src/dto/: fielddto.h
